Add section on Tailwind `inline-flex` for mathematical content layout

--- a/2026/2026-01-22.md
+++ b/2026/2026-01-22.md
@@ -118,3 +118,211 @@ function processUserData(user) {
 2. "Let me **break down** how this API works before we implement it."
 3. "I **grepped** the error logs and found the issue."
 4. "**Grab** that configuration object and **break down** its structure for the team."
+
+# Tailwind `inline-flex` Discovery
+
+**Date:** 2026-01-22  
+**Topic:** Mastering `inline-flex` for mathematical content layout
+
+---
+
+## The discovery
+
+While working on math exercises for paul.craft(), discovered the power of `inline-flex`:
+```html
+<span class="inline-flex gap-60">
+  $\ln(e^3)=\ldots$ 
+  $e^{\ln(5)}=\ldots$ 
+  $\ln(e^{-2})=\ldots$
+</span>
+```
+
+**Result**: Mathematical formulas aligned horizontally with uniform spacing, staying in text flow.
+
+---
+
+## What is `inline-flex`?
+
+### Combination of two concepts
+
+**`inline`**: Element stays in text flow (like `<span>`)  
+**`flex`**: Element uses flexbox for its children
+
+### Visual difference
+
+**`flex` (block-level)**:
+```
+┌─────────────────────────────┐
+│ A    B                      │  ← Takes full width
+└─────────────────────────────┘
+Text below (new line)
+```
+
+**`inline-flex` (inline-level)**:
+```
+Text before A    B text after  ← Same line
+```
+
+---
+
+
+
+**Advantages**:
+- ✅ `gap` applied automatically between all elements
+- ✅ Consistent handling for all elements
+- ✅ Change spacing = change one class
+- ✅ Responsive-ready
+
+---
+
+## Useful variations
+
+### Vertical alignment
+```html
+<span class="inline-flex gap-8 items-center">
+  $\ln(e^3)$ $e^{\ln(5)}$ $\ln(e^{-2})$
+</span>
+```
+
+**`items-center`**: Vertically centers (useful for different-height formulas)
+
+---
+
+### Responsive spacing
+```html
+<span class="inline-flex gap-4 md:gap-8 lg:gap-16">
+  $\ln(e^3)$ $e^{\ln(5)}$ $\ln(e^{-2})$
+</span>
+```
+
+Adapts spacing based on screen size.
+
+---
+
+### Auto-wrap
+```html
+<span class="inline-flex gap-8 flex-wrap">
+  $\ln(e^3)$ $e^{\ln(5)}$ $\ln(e^{-2})$ $e^{\ln(7)}$ $\ln(e^{10})$
+</span>
+```
+
+**`flex-wrap`**: Wraps to next line when needed.
+
+---
+
+## Practical use cases 
+
+### 1. Multiple exercise questions
+```html
+<div class="inline-flex gap-8 flex-wrap">
+  <span>a) $\ln(e^3)=\ldots$</span>
+  <span>b) $e^{\ln(5)}=\ldots$</span>
+  <span>c) $\ln(e^{-2})=\ldots$</span>
+</div>
+```
+
+---
+
+### 2. Step-by-step solutions
+```html
+<div class="space-y-4">
+  <div class="inline-flex gap-4 items-center">
+    <span class="font-bold">Step 1:</span>
+    <span>$\ln(e^3) = 3\ln(e)$</span>
+  </div>
+  <div class="inline-flex gap-4 items-center">
+    <span class="font-bold">Step 2:</span>
+    <span>$= 3 \times 1$</span>
+  </div>
+  <div class="inline-flex gap-4 items-center">
+    <span class="font-bold text-orange-600">Result: $3$</span>
+  </div>
+</div>
+```
+
+---
+
+### 3. Property comparison
+```html
+<div class="inline-flex gap-8 items-baseline">
+  <span class="text-gray-600">Property:</span>
+  <span>$\ln(e^x) = x$</span>
+  <span class="text-gray-400">and</span>
+  <span>$e^{\ln(x)} = x$</span>
+</div>
+```
+
+items-baseline aligns formulas nicely based on their math baselines.
+
+---
+
+### 4. Horizontal MCQ
+```html
+<p>What is $\ln(e^5)$?</p>
+<div class="inline-flex gap-6 flex-wrap">
+  <label class="inline-flex items-center gap-2">
+    <input type="radio" name="q1">
+    <span>a) $1$</span>
+  </label>
+  <label class="inline-flex items-center gap-2">
+    <input type="radio" name="q1">
+    <span>b) $5$</span>
+  </label>
+  <label class="inline-flex items-center gap-2">
+    <input type="radio" name="q1">
+    <span>c) $e$</span>
+  </label>
+</div>
+```
+
+---
+
+## Related utilities
+
+### Grid for matrix layout
+```html
+<div class="inline-grid grid-cols-3 gap-4">
+  <span>$a_{11}$</span> <span>$a_{12}$</span> <span>$a_{13}$</span>
+  <span>$a_{21}$</span> <span>$a_{22}$</span> <span>$a_{23}$</span>
+  <span>$a_{31}$</span> <span>$a_{32}$</span> <span>$a_{33}$</span>
+</div>
+```
+
+---
+
+### Vertical stack
+```html
+<div class="inline-flex flex-col gap-2">
+  <span>$\ln(e^3) = 3$</span>
+  <span>$\ln(e^5) = 5$</span>
+  <span>$\ln(e^{-2}) = -2$</span>
+</div>
+```
+
+---
+
+## Gap values reference
+```css
+gap-1  → 4px
+gap-2  → 8px
+gap-4  → 16px   ← Good for formulas
+gap-8  → 32px   ← Good for formulas
+gap-12 → 48px
+gap-16 → 64px
+gap-60 → 240px  ← Very large (special cases)
+```
+
+**Recommendation**: For math content, `gap-4` to `gap-8` works best.
+
+---
+
+## Key takeaway
+
+`inline-flex` + `gap` = **revolutionary for inline layouts**
+
+Before: manual margins, inconsistent spacing, hard to maintain  
+After: clean, consistent, responsive, effortless
+
+Perfect for mathematical exercises, formulas, and educational content where precision layout matters while keeping text flow natural.
+
+---
