Add Classroom Pong documentation detailing the three-interface approval system architecture, including project overview, React Router setup, WebSocket communication, and backend logic.

--- a/2026/2026-01-16.md
+++ b/2026/2026-01-16.md
@@ -14,8 +14,8 @@
 
 ## 2. IPv4, subnet, and CIDR
 
-- An IPv4 address looks like: `192.168.129.33`
-- The `/23`, `/24`, etc. suffix is **CIDR notation**
+- An IPv4 address looks like: `192.168.129.33` (four octets, 0-255, 32 bits)
+- The `/23`, `/24`, etc. suffix is **CIDR notation** (defines subnet size by e.g. 32-23 = 9 bits for hosts)
 - Examples:
   - `/24` → 255.255.255.0 → 254 usable hosts
   - `/23` → 255.255.254.0 → 510 usable hosts
@@ -400,7 +400,7 @@ Directories interpret permissions differently:
 
 - `r` → list directory contents
 - `w` → create or delete files
-- `x` → enter the directory
+- `x` → enter the directory (it means "access": go inside)
 
 Example:
 
