--- a/2026/2026-01-20.md
+++ b/2026/2026-01-20.md
@@ -128,7 +128,7 @@ Create file:
 /etc/sysctl.d/99-no-ip-forward.conf
 
 Content:
-net.ipv4.ip_forward = 0
+net.ipv4.ip_forward = 0 (here we want 0 but it's safer to be explicicit and make it permanent)
 
 Apply:
 sudo sysctl --system
@@ -171,6 +171,7 @@ Desktop Ubuntu uses NetworkManager.
 
 Problem:
 LAN DHCP added a default route.
+This is maybe a problem because it breaks isolation with the internet.
 
 Solution:
 Mark LAN connection as never default.
@@ -205,9 +206,9 @@ sudo nmcli connection modify \"Wired connection 1\" ipv4.never-default yes
 ## Key Rules Learned
 
 - One default route per machine
-- LAN NIC has no gateway
-- Dual NIC = IP forwarding OFF
-- Use netplan for servers
+- LAN NIC has no gateway (it means no default route)
+- Dual NIC = IP forwarding OFF (never a router)
+- Use netplan for servers 
 - Use NetworkManager rules for PCs
 
 
